--- a/index.html
+++ b/index.html
@@ -356,6 +356,125 @@
     </div>
   </div>
 
+  <div class="header__consultation">
+    <div class="header__consultation_scroll" data-scrollbar>
+      <div class="inner-container header__consultation_container">
+        <div class="header__consultation_blocks">
+          <div class="header__consultation_burger_flex">
+            <button class="button__close header__consultation_burger" aria-label="Закрыть меню">
+              <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="2.5" cy="22.5" r="2.5"></circle>
+                <circle cx="2.5" cy="2.5" r="2.5"></circle>
+                <circle cx="22.5" cy="2.5" r="2.5"></circle>
+                <circle cx="12.5" cy="12.5" r="2.5"></circle>
+                <circle cx="22.5" cy="22.5" r="2.5"></circle>
+              </svg>
+            </button>
+          </div>
+          <div class="header__consultation_block">
+            <div class="header__consultation_info">
+              <div class="header__consultation_say">
+                <h2 class="header__consultation_head">Tell us about your project</h2>
+                <p class="header__consultation_desc">Опишите свою задачу и мы свяжемся с вами в кратчайшие сроки.</p>
+              </div>
+              <div class="header__consultation_contacts">
+                <a href="tel:+79270030100" class="header__consultation_tel">8 927 003 01 00</a>
+                <a href="mailto:hello@anyera.ru" class="header__consultation_mail">info@visualhearts.ru</a>
+              </div>
+            </div>
+            <form id="form" class="header__forms_form">
+              <div class="header__forms_form_controls">
+                <div class="header__forms_form_control">
+                  <input class="header__forms_form_input" type="text" minlength="4" maxlength="40" placeholder="Имя" id="username" />
+                  <span class="header__forms_form_bar"></span>
+                  <small>Error message</small>
+                </div>
+                <div class="header__forms_form_control">
+                  <input class="header__forms_form_input" type="tel" minlength="5" maxlength="20" placeholder="Телефон" id="phone" />
+                  <span class="header__forms_form_bar"></span>
+                  <small>Error message</small>
+                </div>
+                <div class="header__select_box">
+                  <span class="header__select_name">Способ связи</span>
+                  <div class="header__select" data-select>
+                    <div class="header__select_selected_item" data-select-action data-select-open>
+                      <div class="header__select_selected-title" data-select-title>
+                        Выберите способ
+                      </div>
+                      <svg class="header__select_arrow" data-select-arrow width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M11 1L6.05 6L1 1"/>
+                      </svg>
+                    </div>
+                    <div class="header__select_list" data-select-list>
+                      <div class="header__select_list_item" data-select-action data-select-item>Позвонить</div>
+                      <div class="header__select_list_item" data-select-action data-select-item>Написать на почту</div>
+                      <div class="header__select_list_item" data-select-action data-select-item>Написать в телеграм</div>
+                    </div>
+                    <input class="header__select_input" type="text" data-select-input>
+                  </div>
+                </div>
+                <div class="header__select_box">
+                  <span class="header__select_name">Бюджет проекта</span>
+                  <div class="header__select" data-select>
+                    <div class="header__select_selected_item" data-select-action data-select-open>
+                      <div class="header__select_selected-title" data-select-title>
+                        Выберите бюджет
+                      </div>
+                      <svg class="header__select_arrow" data-select-arrow width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M11 1L6.05 6L1 1" stroke="#262626"/>
+                      </svg>
+                    </div>
+                    <div class="header__select_list" data-select-list>
+                      <div class="header__select_list_item" data-select-action data-select-item>от 50 до 150</div>
+                      <div class="header__select_list_item" data-select-action data-select-item>от 150 до 500</div>
+                      <div class="header__select_list_item" data-select-action data-select-item>от 500 до 1 млн</div>
+                      <div class="header__select_list_item" data-select-action data-select-item>от 1 млн</div>
+                    </div>
+                    <input class="header__select_input" type="text" data-select-input>
+                  </div>
+                </div>
+                <div class="header__select_box">
+                  <span class="header__select_name">Тип услуги</span>
+                  <div class="header__select" data-select>
+                    <div class="header__select_selected_item" data-select-action data-select-open>
+                      <div class="header__select_selected-title" data-select-title>
+                        Выберите тип
+                      </div>
+                      <svg class="header__select_arrow" data-select-arrow width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M11 1L6.05 6L1 1" stroke="#262626"/>
+                      </svg>
+                    </div>
+                    <div class="header__select_list" data-select-list>
+                      <div class="header__select_list_item" data-select-action data-select-item>Одностраничный сайт</div>
+                      <div class="header__select_list_item" data-select-action data-select-item>Многостраничный сайт</div>
+                      <div class="header__select_list_item" data-select-action data-select-item>Нужен интернет-магазин</div>
+                      <div class="header__select_list_item" data-select-action data-select-item>Веб-приложение</div>
+                      <div class="header__select_list_item" data-select-action data-select-item>Дизайн</div>
+                      <div class="header__select_list_item" data-select-action data-select-item>Иллюстрации</div>
+                      <div class="header__select_list_item" data-select-action data-select-item>Другое</div>
+                    </div>
+                    <input class="header__select_input" type="text" data-select-input>
+                  </div>
+                </div>
+                <div class="header__forms_form_control">
+                  <span class="header__form_name">Опишите проект</span>
+                  <textarea class="header__forms_form_input header__forms_form_textarea" name="" id="text" placeholder=""></textarea>
+                  <span class="header__forms_form_bar"></span>
+                  <small>Error message</small>
+                </div>
+              </div>
+              <div class="button__project button__project_input header__form_button">
+                <input type="submit" name="submit" value="Отправить" class="button__text">
+                <span class="button__hover"></span>
+              </div>
+              <p class="header__form_policy">Нажимая на кнопку, вы соглашаетесь с условиями <a href="#">политики конфиденциальности</a>.</p>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
   <script src="js/swiper.min.js"></script>
   <script src="js/main.js"></script>
   <script src="js/scroll.js"></script>
@@ -374,10 +493,10 @@
     };
     scroll = new LocomotiveScroll({el: document.querySelector('[data-scroll-container]'),inertia: 0.8,smooth: true,getDirection: true,mobile: {breakpoint: 0,smooth: true,getDirection: true,},tablet: {breakpoint: 0,smooth: true,getDirection: true,},smartphone: {breakpoint: 0,smooth: true,getDirection: true,}})
     new ResizeObserver(() => scroll.update()).observe(document.querySelector("[data-scroll-container]"));
-    // const hn_scroll = document.querySelector('.header__nav_scroll');
-    // const hc_scroll = document.querySelector('.header__consultation_scroll');
-    // Scrollbar.init(hn_scroll);
-    // Scrollbar.init(hc_scroll);
+    const hn_scroll = document.querySelector('.header__nav_scroll');
+    const hc_scroll = document.querySelector('.header__consultation_scroll');
+    Scrollbar.init(hn_scroll);
+    Scrollbar.init(hc_scroll);
     const headerprogress = document.querySelector('.header__progress_bar');
     scroll.on('scroll', (args) => {
       var scrollY = Math.round(args["scroll"]["y"]);
