--- a/index.html
+++ b/index.html
@@ -73,47 +73,53 @@
       </div>
     </div>
   </header>
-  <main class="main" data-scroll-speed="10" data-scroll-container="" id="top">
+  <main class="main" data-scroll-container id="top">
     <div class="main__border"></div>
-    <section class="digital">
-      <div class="container digital__container">
-        <ul class="digital_social_list">
-          <li><a href="https://t.me/anyera" target="_blank" class="digital_social_link">TG</a></li>
-          <li><a href="https://vk.com/anyera" target="_blank" class="digital_social_link">VK</a></li>
-          <li><a href="https://www.behance.net/anyera" target="_blank" class="digital_social_link">BE</a></li>
-          <li><a href="#" target="_blank" class="digital_social_link">DR</a></li>
-        </ul>
-        <div class="digital__info">
-          <h1 class="digital__head"><span>D</span><span>I</span><span>G</span><span>I</span><span>T</span><span>A</span><span>L</span><span> </span><br><span>&amp;</span> <span> </span><span>D</span><span>E</span><span>S</span><span>I</span><span>G</span><span>N</span></h1>
-          <p class="digital__desc">
-            Команда дизайнеров и инженеров разрабатываем функциональные продукты широкого круга от идеи до реализации.
-          </p>
+    <section class="digital" data-scroll-section>
+      <div data-scroll data-scroll-speed="-3">
+        <div class="container digital__container">
+          <ul class="digital_social_list" data-scroll data-scroll-speed="-1">
+            <li><a href="https://t.me/anyera" target="_blank" class="digital_social_link">TG</a></li>
+            <li><a href="https://vk.com/anyera" target="_blank" class="digital_social_link">VK</a></li>
+            <li><a href="https://www.behance.net/anyera" target="_blank" class="digital_social_link">BE</a></li>
+            <li><a href="#" target="_blank" class="digital_social_link">DR</a></li>
+          </ul>
+          <div class="digital__info" data-scroll data-scroll-speed="-1">
+              <h1 class="digital__head"><span>D</span><span>I</span><span>G</span><span>I</span><span>T</span><span>A</span><span>L</span><span> </span><br><span>&amp;</span> <span> </span><span>D</span><span>E</span><span>S</span><span>I</span><span>G</span><span>N</span></h1>
+              <p class="digital__desc">
+                Команда дизайнеров и инженеров разрабатываем функциональные продукты широкого круга от идеи до реализации.
+              </p>
+          </div>
         </div>
-      </div>
-      <div class="accredited__flex">
-        <ul class="accredited__list">
-          <li class="accredited__item">
-            <p class="accredited__head">ACCREDITED IT COMPANY</p>
-            <p class="accredited__desc">The Ministry of Digital Development of the Russian Federation confirms that we are a reliable contractor.</p>
-          </li>
-          <li class="accredited__item">
-            <p class="accredited__head">BITRIX PARTNER</p>
-            <p class="accredited__desc">We are officially a partner of Bitrix and provide licenses for your sites.</p>
-          </li>
-        </ul>
+        <div>
+          <div class="accredited__flex">
+            <ul class="accredited__list">
+              <li class="accredited__item">
+                <p class="accredited__head">ACCREDITED IT COMPANY</p>
+                <p class="accredited__desc">The Ministry of Digital Development of the Russian Federation confirms that we are a reliable contractor.</p>
+              </li>
+              <li class="accredited__item">
+                <p class="accredited__head">BITRIX PARTNER</p>
+                <p class="accredited__desc">We are officially a partner of Bitrix and provide licenses for your sites.</p>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
-    <section class="showreel">
-      <button class="showreel__button">
-        <div class="showreel__block">
-          <video poster="img/main/showreel.webp" playsinline autoplay muted loop>
-            <source src="img/main/showreel.mp4" type="video/mp4">
-          </video>
-        </div>
-      </button>
+    <section class="showreel" data-scroll-section>
+      <div class="container showreel__container" data-scroll-speed="3">
+        <button class="showreel__button">
+          <div class="showreel__block">
+            <video poster="img/main/showreel.webp" playsinline autoplay muted loop>
+              <source src="img/main/showreel.mp4" type="video/mp4">
+            </video>
+          </div>
+        </button>
+      </div>
     </section>
   </main>
-  <footer class="footer">
+  <footer class="footer" data-scroll-section>
     <div class="container">
 
     </div>
