--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <main class="main" data-scroll-container id="top">
     <div class="main__border"></div>
     <section class="digital" data-scroll-section>
-      <div data-scroll data-scroll-speed="-3">
+      <div data-scroll data-scroll-speed="-3" data-scroll-delay="0.5">
         <div class="container digital__container">
           <ul class="digital_social_list" data-scroll data-scroll-speed="-2">
             <li><a href="https://t.me/anyera" target="_blank" class="digital_social_link">TG</a></li>
@@ -108,7 +108,7 @@
       </div>
     </section>
     <section class="showreel" data-scroll-section>
-      <div class="container showreel__container" data-scroll-speed="3">
+      <div class="container showreel__container" data-scroll-speed="3" data-scroll-delay="0.5">
         <button class="showreel__button">
           <div class="showreel__block">
             <video poster="img/main/showreel.webp" playsinline autoplay muted loop>
