--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
           </li>
         </ul>
         <div class="digital__info" data-scroll data-scroll-speed="2">
-            <h1 class="digital__head"><span>D</span><span>I</span><span>G</span><span>I</span><span>T</span><span>A</span><span>L</span><span> </span><br><span>&amp;</span> <span> </span><span>D</span><span>E</span><span>S</span><span>I</span><span>G</span><span>N</span></h1>
-            <p class="digital__desc">
-              Команда дизайнеров и инженеров разрабатываем функциональные продукты широкого круга от идеи до реализации.
-            </p>
+          <h1 class="digital__head"><span>D</span><span>I</span><span>G</span><span>I</span><span>T</span><span>A</span><span>L</span><span> </span><br><span>&amp;</span> <span> </span><span>D</span><span>E</span><span>S</span><span>I</span><span>G</span><span>N</span></h1>
+          <p class="digital__desc">
+            Команда дизайнеров и инженеров разрабатываем функциональные продукты широкого круга от идеи до реализации.
+          </p>
         </div>
       </div>
       <div data-scroll data-scroll-speed="2">
@@ -143,15 +143,99 @@
         </div>
       </div>
     </section>
-    <section class="showreel" data-scroll-section data-scroll-section-inview>
-      <div class="container showreel__container" data-scroll data-scroll-call="dynamicBackground">
-        <button class="showreel__button" data-scroll data-scroll-sticky>
-          <div class="showreel__block">
-            <video poster="img/main/showreel.webp" playsinline autoplay muted loop>
-              <source src="img/main/showreel.mp4" type="video/mp4">
-            </video>
+    <section class="expertise" data-scroll-section>
+      <div class="expertise__border"></div>
+      <div class="container expertise__container">
+        <div class="expertise__block">
+          <div class="expertise__left">
+            <button class="expertise__button">
+              <h3>Frontend-разработчик</h3>
+              <span>
+                <svg width="9" height="9" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0.928932 0.928993C0.65279 0.928993 0.428932 1.15285 0.428932 1.42899L0.428932 5.92899C0.428932 6.20514 0.65279 6.42899 0.928932 6.42899C1.20507 6.42899 1.42893 6.20514 1.42893 5.92899L1.42893 1.92899L5.42893 1.92899C5.70507 1.92899 5.92893 1.70514 5.92893 1.42899C5.92893 1.15285 5.70507 0.928993 5.42893 0.928993L0.928932 0.928993ZM8.35355 8.14651L1.28249 1.07544L0.575379 1.78255L7.64645 8.85361L8.35355 8.14651Z" fill="currentColor"/>
+                </svg>
+              </span>
+            </button>
+            <div class="expertise__panel">
+              <p>Предпочитаем обоснованный дизайн, функциональный и приносящий пользу своим владельцам. Поэтому проводим исследования пользовательского опыта и продукта, чтобы полностью убедиться в рентабельности проекта</p>
+              <br>
+              <span>В нашем арсенале:</span>
+              <ul>
+                <li>· Продуктовая и маркетинговая аналитика</li>
+                <li>· UX - исследование</li>
+                <li>· Анализ конкуренции и метрик</li>
+              </ul>
+            </div>
+            <button class="expertise__button">
+              <h3>PHP-разработчик</h3>
+              <span>
+                <svg width="9" height="9" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0.928932 0.928993C0.65279 0.928993 0.428932 1.15285 0.428932 1.42899L0.428932 5.92899C0.428932 6.20514 0.65279 6.42899 0.928932 6.42899C1.20507 6.42899 1.42893 6.20514 1.42893 5.92899L1.42893 1.92899L5.42893 1.92899C5.70507 1.92899 5.92893 1.70514 5.92893 1.42899C5.92893 1.15285 5.70507 0.928993 5.42893 0.928993L0.928932 0.928993ZM8.35355 8.14651L1.28249 1.07544L0.575379 1.78255L7.64645 8.85361L8.35355 8.14651Z" fill="currentColor"/>
+                </svg>
+              </span>
+            </button>
+            <div class="expertise__panel">
+              <p>Предпочитаем обоснованный дизайн, функциональный и приносящий пользу своим владельцам. Поэтому проводим исследования пользовательского опыта и продукта, чтобы полностью убедиться в рентабельности проекта</p>
+              <br>
+              <span>В нашем арсенале:</span>
+              <ul>
+                <li>· Продуктовая и маркетинговая аналитика</li>
+                <li>· UX - исследование</li>
+                <li>· Анализ конкуренции и метрик</li>
+              </ul>
+            </div>
+            <button class="expertise__button">
+              <h3>Бизнес-аналитик</h3>
+              <span>
+                <svg width="9" height="9" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0.928932 0.928993C0.65279 0.928993 0.428932 1.15285 0.428932 1.42899L0.428932 5.92899C0.428932 6.20514 0.65279 6.42899 0.928932 6.42899C1.20507 6.42899 1.42893 6.20514 1.42893 5.92899L1.42893 1.92899L5.42893 1.92899C5.70507 1.92899 5.92893 1.70514 5.92893 1.42899C5.92893 1.15285 5.70507 0.928993 5.42893 0.928993L0.928932 0.928993ZM8.35355 8.14651L1.28249 1.07544L0.575379 1.78255L7.64645 8.85361L8.35355 8.14651Z" fill="currentColor"/>
+                </svg>
+              </span>
+            </button>
+            <div class="expertise__panel">
+              <p>Предпочитаем обоснованный дизайн, функциональный и приносящий пользу своим владельцам. Поэтому проводим исследования пользовательского опыта и продукта, чтобы полностью убедиться в рентабельности проекта</p>
+              <br>
+              <span>В нашем арсенале:</span>
+              <ul>
+                <li>· Продуктовая и маркетинговая аналитика</li>
+                <li>· UX - исследование</li>
+                <li>· Анализ конкуренции и метрик</li>
+              </ul>
+            </div>
+            <button class="expertise__button">
+              <h3>Digital-маркетолог</h3>
+              <span>
+                <svg width="9" height="9" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0.928932 0.928993C0.65279 0.928993 0.428932 1.15285 0.428932 1.42899L0.428932 5.92899C0.428932 6.20514 0.65279 6.42899 0.928932 6.42899C1.20507 6.42899 1.42893 6.20514 1.42893 5.92899L1.42893 1.92899L5.42893 1.92899C5.70507 1.92899 5.92893 1.70514 5.92893 1.42899C5.92893 1.15285 5.70507 0.928993 5.42893 0.928993L0.928932 0.928993ZM8.35355 8.14651L1.28249 1.07544L0.575379 1.78255L7.64645 8.85361L8.35355 8.14651Z" fill="currentColor"/>
+                </svg>
+              </span>
+            </button>
+            <div class="expertise__panel">
+              <p>Предпочитаем обоснованный дизайн, функциональный и приносящий пользу своим владельцам. Поэтому проводим исследования пользовательского опыта и продукта, чтобы полностью убедиться в рентабельности проекта</p>
+              <br>
+              <span>В нашем арсенале:</span>
+              <ul>
+                <li>· Продуктовая и маркетинговая аналитика</li>
+                <li>· UX - исследование</li>
+                <li>· Анализ конкуренции и метрик</li>
+              </ul>
+            </div>
           </div>
-        </button>
+          <div class="expertise__right">
+            <div class="expertise__flex">
+              <h2 class="expertise__head">ЭКСПЕРТИЗА</h2>
+              <p class="expertise__desc">Мы разрабатываем как Low-code решения, так и самописные сложные проекты. Придерживаемся современного и функционального дизайна который будет актуален много лет.</p>
+            </div>
+            <p class="expertise__arrow">
+              <span>
+                <svg width="11" height="8" viewBox="0 0 11 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0.646447 3.64645C0.451184 3.84171 0.451184 4.15829 0.646447 4.35355L3.82843 7.53553C4.02369 7.7308 4.34027 7.7308 4.53553 7.53553C4.7308 7.34027 4.7308 7.02369 4.53553 6.82843L1.70711 4L4.53553 1.17157C4.7308 0.976311 4.7308 0.659728 4.53553 0.464466C4.34027 0.269204 4.02369 0.269204 3.82843 0.464466L0.646447 3.64645ZM1 4.5L11 4.5V3.5L1 3.5V4.5Z" fill="currentColor"/>
+                </svg>
+              </span>
+              Наши компетенции
+            </p>
+          </div>
+        </div>
       </div>
     </section>
   </main>
@@ -344,7 +428,9 @@
   <div class="showreel__modal">
     <div class="showreel__modal_inner">
       <div class="showreel__video_responsive">
-        <video id="showreel__video" src="https://player.vimeo.com/external/194837908.sd.mp4?s=c350076905b78c67f74d7ee39fdb4fef01d12420&profile_id=164" data-overlay="1" data-title="ANYERA"></video>
+        <video id="showreel__video" poster="img/main/showreel.webp" playsinline autoplay muted loop data-overlay="1" data-title="ANYERA">
+          <source src="img/main/showreel.mp4" type="video/mp4">
+        </video>
       </div>
       <button class="button__close showreel__modal_close" aria-label="Закрыть видео">
         <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
