--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Anyera</title>
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link href="img/apple-touch-icon.png" rel="apple-touch-icon" sizes="72x72">
+  <link href="img/apple-touch-icon.png" rel="apple-touch-icon" sizes="76x76">
+  <link href="img/apple-touch-icon.png" rel="apple-touch-icon" sizes="144x144">
+  <link href="img/apple-touch-icon.png" rel="apple-touch-icon" sizes="152x152">
+  <link href="img/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+  <link href="img/apple-touch-icon-192x192" rel="apple-touch-icon" sizes="192x192">
+  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <meta name="msapplication-TileImage" content="img/apple-touch-icon.png">
+  <link href="img/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
+  <link href="img/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+  <link href="img/favicon.ico" rel="shortcut icon">
+  <link href="img/site.webmanifest" rel="manifest">
   <link rel="stylesheet" href="css/swiper.min.css">
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/reset.css">
@@ -65,9 +77,9 @@
         <div class="header__right">
           <a class="header__link" href="#">Команда</a>
           <a class="header__link" href="#">Проекты</a>
-          <button class="btn header__project">
-            <span class="button__text">ОБСУДИТЬ ПРОЕКТ</span>
-            <span class="button__hover"></span>
+          <button class="btn">
+            <div class="btn__side btn__side_default">ОБСУДИТЬ ПРОЕКТ</div>
+            <div class="btn__side btn__side_hover">ОБСУДИТЬ ПРОЕКТ</div>
           </button>
         </div>
       </div>
@@ -245,9 +257,9 @@
             <h3 class="projects__head">Products &amp; Services</h3>
             <div class="projects__right">
               <p class="projects__desc">Создаем цифровые сервисы с современным UI/UX дизайном от идеи до реализации.</p>
-              <button class="btn projects__button">
-                <span class="button__text">Подробнее</span>
-                <span class="button__hover"></span>
+              <button class="btn">
+                <div class="btn__side btn__side_default">Подробнее</div>
+                <div class="btn__side btn__side_hover">Подробнее</div>
               </button>
             </div>
           </div>
@@ -307,9 +319,9 @@
             <h3 class="projects__head">eCommerce</h3>
             <div class="projects__right">
               <p class="projects__desc">Функциональные и удобные площадки для интернет торговли рост продаж обязателен.</p>
-              <button class="btn projects__button">
-                <span class="button__text">Подробнее</span>
-                <span class="button__hover"></span>
+              <button class="btn">
+                <div class="btn__side btn__side_default">Подробнее</div>
+                <div class="btn__side btn__side_hover">Подробнее</div>
               </button>
             </div>
           </div>
@@ -369,9 +381,9 @@
             <h3 class="projects__head">Corporative Site</h3>
             <div class="projects__right">
               <p class="projects__desc">Создаем цифровые сервисы с современным UI/UX дизайном от идеи до реализации.</p>
-              <button class="btn projects__button">
-                <span class="button__text">Подробнее</span>
-                <span class="button__hover"></span>
+              <button class="btn">
+                <div class="btn__side btn__side_default">Подробнее</div>
+                <div class="btn__side btn__side_hover">Подробнее</div>
               </button>
             </div>
           </div>
@@ -423,6 +435,13 @@
               </a>
             </li>
           </ul>
+        </div>
+      </div>
+    </section>
+    <section class="articles" data-scroll-section>
+      <div class="container articles__container">
+        <div class="articles__block">
+
         </div>
       </div>
     </section>
