--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="header__right">
           <a class="header__link" href="#">Команда</a>
           <a class="header__link" href="#">Проекты</a>
-          <button class="btn">
+          <button class="btn button__project">
             <div class="btn__side btn__side_default">ОБСУДИТЬ ПРОЕКТ</div>
             <div class="btn__side btn__side_hover">ОБСУДИТЬ ПРОЕКТ</div>
           </button>
