--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         <div class="header__right">
           <a class="header__link" href="#">Команда</a>
           <a class="header__link" href="#">Проекты</a>
-          <button class="btn button__project">
-            <div class="btn__side btn__side_default">ОБСУДИТЬ ПРОЕКТ</div>
-            <div class="btn__side btn__side_hover">ОБСУДИТЬ ПРОЕКТ</div>
+          <button class="btn header__project">
+            <span class="button__text">ОБСУДИТЬ ПРОЕКТ</span>
+            <span class="button__hover"></span>
           </button>
         </div>
       </div>
@@ -257,9 +257,9 @@
             <h3 class="projects__head">Products &amp; Services</h3>
             <div class="projects__right">
               <p class="projects__desc">Создаем цифровые сервисы с современным UI/UX дизайном от идеи до реализации.</p>
-              <button class="btn">
-                <div class="btn__side btn__side_default">Подробнее</div>
-                <div class="btn__side btn__side_hover">Подробнее</div>
+              <button class="btn projects__button">
+                <span class="button__text">Подробнее</span>
+                <span class="button__hover"></span>
               </button>
             </div>
           </div>
@@ -319,9 +319,9 @@
             <h3 class="projects__head">eCommerce</h3>
             <div class="projects__right">
               <p class="projects__desc">Функциональные и удобные площадки для интернет торговли рост продаж обязателен.</p>
-              <button class="btn">
-                <div class="btn__side btn__side_default">Подробнее</div>
-                <div class="btn__side btn__side_hover">Подробнее</div>
+              <button class="btn projects__button">
+                <span class="button__text">Подробнее</span>
+                <span class="button__hover"></span>
               </button>
             </div>
           </div>
@@ -381,9 +381,9 @@
             <h3 class="projects__head">Corporative Site</h3>
             <div class="projects__right">
               <p class="projects__desc">Создаем цифровые сервисы с современным UI/UX дизайном от идеи до реализации.</p>
-              <button class="btn">
-                <div class="btn__side btn__side_default">Подробнее</div>
-                <div class="btn__side btn__side_hover">Подробнее</div>
+              <button class="btn projects__button">
+                <span class="button__text">Подробнее</span>
+                <span class="button__hover"></span>
               </button>
             </div>
           </div>
@@ -441,7 +441,56 @@
     <section class="articles" data-scroll-section>
       <div class="container articles__container">
         <div class="articles__block">
-
+          <ul class="articles__list">
+            <li class="articles__item">
+              <a href="#" class="articles__link">
+                <div class="articles__image">
+                  <img src="img/articles/articles_1.webp" alt="">
+                  <span class="articles__date">31.07.2023</span>
+                </div>
+                <div class="articles__info">
+                  <h5 class="articles__head">Как мы искали название</h5>
+                  <p class="articles__desc">Немного о наших  долгих поисках названия в тчении 2х лет Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. О его собрал силуэт назад вдали пояс предупредила повстречался правилами до города грустный свой запятой своих меня, однажды агентство ipsum.</p>
+                </div>
+              </a>
+            </li>
+            <li class="articles__item">
+              <a href="#" class="articles__link">
+                <div class="articles__image">
+                  <img src="img/articles/articles_2.webp" alt="">
+                  <span class="articles__date">31.07.2023</span>
+                </div>
+                <div class="articles__info">
+                  <h5 class="articles__head">В Поиске вдохновения</h5>
+                  <p class="articles__desc">Немного о наших  долгих поисках названия в тчении 2х лет Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. О его собрал силуэт назад вдали пояс предупредила повстречался правилами до города грустный свой запятой своих меня, однажды агентство ipsum.</p>
+                </div>
+              </a>
+            </li>
+            <li class="articles__item">
+              <a href="#" class="articles__link">
+                <div class="articles__image">
+                  <img src="img/articles/articles_3.webp" alt="">
+                  <span class="articles__date">31.07.2023</span>
+                </div>
+                <div class="articles__info">
+                  <h5 class="articles__head">Как создать команду мечты</h5>
+                  <p class="articles__desc">Немного о наших  долгих поисках названия в тчении 2х лет Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. О его собрал силуэт назад вдали пояс предупредила повстречался правилами до города грустный свой запятой своих меня, однажды агентство ipsum.</p>
+                </div>
+              </a>
+            </li>
+            <li class="articles__item">
+              <a href="#" class="articles__link">
+                <div class="articles__image">
+                  <img src="img/articles/articles_4.webp" alt="">
+                  <span class="articles__date">31.07.2023</span>
+                </div>
+                <div class="articles__info">
+                  <h5 class="articles__head">Работаем и отдыхаем на бали</h5>
+                  <p class="articles__desc">Немного о наших  долгих поисках названия в тчении 2х лет Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. О его собрал силуэт назад вдали пояс предупредила повстречался правилами до города грустный свой запятой своих меня, однажды агентство ipsum.</p>
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </section>
