--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="header__right">
           <a class="header__link" href="#">Команда</a>
           <a class="header__link" href="#">Проекты</a>
-          <button class="btn header__project">
+          <button class="btn button__project">
             <span class="button__text">ОБСУДИТЬ ПРОЕКТ</span>
             <span class="button__hover"></span>
           </button>
@@ -843,7 +843,7 @@
         document.querySelector('.preloader').style.display = "none";
       }, 300);
     };
-    scroll = new LocomotiveScroll({el: document.querySelector('[data-scroll-container]'),inertia: 1,smooth: true,mobile: {breakpoint: 0,smooth: true,},tablet: {breakpoint: 0,smooth: true,},smartphone: {breakpoint: 0,smooth: true,}})
+    scroll = new LocomotiveScroll({el: document.querySelector('[data-scroll-container]'),inertia: 1,lerp: 0.03,smooth: true,mobile: {breakpoint: 0,smooth: true,},tablet: {breakpoint: 0,smooth: true,},smartphone: {breakpoint: 0,smooth: true,}})
     new ResizeObserver(() => scroll.update()).observe(document.querySelector("[data-scroll-container]"));
     const hn_scroll = document.querySelector('.header__nav_scroll');
     const hc_scroll = document.querySelector('.header__consultation_scroll');
