--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
           <span></span>
         </button>
         <div class="header__right">
-          <a class="header__link" href="#">Команда</a>
-          <a class="header__link" href="#">Проекты</a>
+          <a class="header__link text" href="#"><span class="text__rotate">Команда</span></a>
+          <a class="header__link text" href="#"><span class="text__rotate">Проекты</span></a>
           <button class="btn button__project">
             <span class="button__text">ОБСУДИТЬ ПРОЕКТ</span>
             <span class="button__hover"></span>
@@ -575,35 +575,35 @@
             <ul class="header__nav_list">
               <li class="header__nav_item">
                 <h3>
-                  <a href="index.html" class="header__nav_link">
+                  <a href="index.html" class="header__nav_link text">
                     <span>Услуги</span>
                   </a>
                 </h3>
               </li>
               <li class="header__nav_item">
                 <h3>
-                  <a href="projects.html" class="header__nav_link">
+                  <a href="projects.html" class="header__nav_link text">
                     <span>Команда</span>
                   </a>
                 </h3>
               </li>
               <li class="header__nav_item">
                 <h3>
-                  <a href="services.html" class="header__nav_link">
+                  <a href="services.html" class="header__nav_link text">
                     <span>Проекты</span>
                   </a>
                 </h3>
               </li>
               <li class="header__nav_item">
                 <h3>
-                  <a href="team.html" class="header__nav_link">
+                  <a href="team.html" class="header__nav_link text">
                     <span>Карьера</span>
                   </a>
                 </h3>
               </li>
               <li class="header__nav_item">
                 <h3>
-                  <a href="public.html" class="header__nav_link">
+                  <a href="public.html" class="header__nav_link text">
                     <span>Статьи</span>
                   </a>
                 </h3>
@@ -614,13 +614,17 @@
                 <li class="header__nav_contact_item">
                   <p class="header__nav_contact_desc">Сall us by number:</p>
                   <a href="tel:+79270030100" class="header__nav_contact_link">
-                    <h5 class="header__nav_contact_head">8 927 003 01 00</h5>
+                    <h5 class="header__nav_contact_head text">
+                      <span class="text__rotate">8 927 003 01 00</span>
+                    </h5>
                   </a>
                 </li>
                 <li class="header__nav_contact_item">
                   <p class="header__nav_contact_desc">Write to our mail:</p>
                   <a href="mailto:hello@anyera.ru" class="header__nav_contact_link">
-                    <h5 class="header__nav_contact_head">HELLO@ANYERA.RU</h5>
+                    <h5 class="header__nav_contact_head text">
+                      <span class="text__rotate">HELLO@ANYERA.RU</span>
+                    </h5>
                   </a>
                 </li>
               </ul>
