--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon" sizes="144x144">
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon" sizes="152x152">
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
-  <link href="img/apple-touch-icon-192x192" rel="apple-touch-icon" sizes="192x192">
+  <link href="img/apple-touch-icon-192x192.png" rel="apple-touch-icon" sizes="192x192">
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
   <meta name="msapplication-TileImage" content="img/apple-touch-icon.png">
   <link href="img/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
