--- a/index.html
+++ b/index.html
@@ -476,6 +476,13 @@
       <div class="main__border"></div>
       <div class="container articles__container">
         <div class="articles__block">
+          <div class="articles__top">
+            <h3 class="articles__head">Статьи</h3>
+            <button class="btn articles__project">
+              <span class="button__text">НАШ БЛОГ</span>
+              <span class="button__hover"></span>
+            </button>
+          </div>
           <div class="articles__slider">
             <div class="articles__swiper swiper-container">
               <ul class="articles__list swiper-wrapper">
