--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
       </div>
     </div>
   </header>
-  <main class="main" data-scroll-container id="top">
+  <main class="main" data-scroll-container>
+    <section class="top" data-scroll-section id="top"></section>
     <div class="main__border"></div>
     <section class="digital" data-scroll-section>
       <div class="main__border"></div>
@@ -285,7 +286,7 @@
       <div class="projects__block">
         <div class="main__border"></div>
         <div class="container projects__container" data-scroll data-scroll-speed="-1.5">
-          <div class="projects__flex" data-scroll>
+          <div class="projects__flex">
             <h3 class="projects__head">Products &amp; Services</h3>
             <div class="projects__right">
               <p class="projects__desc">Создаем цифровые сервисы с современным UI/UX дизайном от идеи до реализации.</p>
@@ -295,7 +296,7 @@
               </button>
             </div>
           </div>
-          <ul class="projects__list" data-scroll>
+          <ul class="projects__list">
             <li class="projects__item">
               <a href="#" class="projects__link">
                 <div class="projects__image">
@@ -345,10 +346,12 @@
           </ul>
         </div>
       </div>
+    </section>
+    <section class="projects" data-scroll-section>
       <div class="projects__block">
         <div class="main__border"></div>
         <div class="container projects__container" data-scroll data-scroll-speed="-1.5">
-          <div class="projects__flex" data-scroll>
+          <div class="projects__flex">
             <h3 class="projects__head">eCommerce</h3>
             <div class="projects__right">
               <p class="projects__desc">Функциональные и удобные площадки для интернет торговли рост продаж обязателен.</p>
@@ -358,7 +361,7 @@
               </button>
             </div>
           </div>
-          <ul class="projects__list" data-scroll>
+          <ul class="projects__list">
             <li class="projects__item">
               <a href="#" class="projects__link">
                 <div class="projects__image">
@@ -408,10 +411,12 @@
           </ul>
         </div>
       </div>
+    </section>
+    <section class="projects" data-scroll-section>
       <div class="projects__block">
         <div class="main__border"></div>
         <div class="container projects__container" data-scroll data-scroll-speed="-1.5">
-          <div class="projects__flex" data-scroll>
+          <div class="projects__flex">
             <h3 class="projects__head">Corporative Site</h3>
             <div class="projects__right">
               <p class="projects__desc">Создаем цифровые сервисы с современным UI/UX дизайном от идеи до реализации.</p>
@@ -421,7 +426,7 @@
               </button>
             </div>
           </div>
-          <ul class="projects__list" data-scroll>
+          <ul class="projects__list">
             <li class="projects__item">
               <a href="#" class="projects__link">
                 <div class="projects__image">
@@ -576,14 +581,14 @@
               <div class="footer__mail">
                 <p class="footer__mail_info">Напишите нам:</p>
                 <a href="mailto:hello@anyera.ru" class="footer__mail_send">
-                  <h5 class="header__nav_contact_head text">
+                  <h5 class="header__nav_contact_head text text__big">
                     <span class="text__rotate">HELLO@ANYERA.RU</span>
                   </h5>
                 </a>
               </div>
               <div class="footer__contact">
                 <a href="tel:+79270030100" class="footer__contact_tel">
-                  <h5 class="header__nav_contact_head text">
+                  <h5 class="header__nav_contact_head text text__big">
                     <span class="text__rotate">8 927 003 01 00</span>
                   </h5>
                 </a>
@@ -727,7 +732,7 @@
                 <li class="header__nav_contact_item">
                   <p class="header__nav_contact_desc">Сall us by number:</p>
                   <a href="tel:+79270030100" class="header__nav_contact_link">
-                    <h5 class="header__nav_contact_head text">
+                    <h5 class="header__nav_contact_head text text__big">
                       <span class="text__rotate">8 927 003 01 00</span>
                     </h5>
                   </a>
@@ -735,7 +740,7 @@
                 <li class="header__nav_contact_item">
                   <p class="header__nav_contact_desc">Write to our mail:</p>
                   <a href="mailto:hello@anyera.ru" class="header__nav_contact_link">
-                    <h5 class="header__nav_contact_head text">
+                    <h5 class="header__nav_contact_head text text__big">
                       <span class="text__rotate">HELLO@ANYERA.RU</span>
                     </h5>
                   </a>
