--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
     <section class="projects" data-scroll-section>
       <div class="projects__block">
         <div class="main__border"></div>
-        <div class="container projects__container" data-scroll data-scroll-speed="-1.5">
+        <div class="container projects__container" data-scroll data-scroll-speed="-5" data-scroll-class="appear" data-scroll-repeat="true">
           <div class="projects__flex">
             <h3 class="projects__head">Products &amp; Services</h3>
             <div class="projects__right">
@@ -350,7 +350,7 @@
     <section class="projects" data-scroll-section>
       <div class="projects__block">
         <div class="main__border"></div>
-        <div class="container projects__container" data-scroll data-scroll-speed="-1.5">
+        <div class="container projects__container" data-scroll data-scroll-speed="-5" data-scroll-class="appear" data-scroll-repeat="true">
           <div class="projects__flex">
             <h3 class="projects__head">eCommerce</h3>
             <div class="projects__right">
@@ -415,7 +415,7 @@
     <section class="projects" data-scroll-section>
       <div class="projects__block">
         <div class="main__border"></div>
-        <div class="container projects__container" data-scroll data-scroll-speed="-1.5">
+        <div class="container projects__container" data-scroll data-scroll-speed="-5" data-scroll-class="appear" data-scroll-repeat="true">
           <div class="projects__flex">
             <h3 class="projects__head">Corporative Site</h3>
             <div class="projects__right">
