--- a/index.html
+++ b/index.html
@@ -283,10 +283,10 @@
       </div>
     </section>
     <section class="projects" data-scroll-section>
-      <div class="projects__block">
-        <div class="main__border"></div>
-        <div class="container projects__container" data-scroll data-scroll-speed="-5" data-scroll-class="appear" data-scroll-repeat="true">
-          <div class="projects__flex">
+      <div class="projects__block" data-scroll data-scroll-speed="-5">
+        <div class="main__border" data-scroll></div>
+        <div class="container projects__container" data-scroll>
+          <div class="projects__flex" data-scroll>
             <h3 class="projects__head">Products &amp; Services</h3>
             <div class="projects__right">
               <p class="projects__desc">Создаем цифровые сервисы с современным UI/UX дизайном от идеи до реализации.</p>
@@ -296,7 +296,7 @@
               </button>
             </div>
           </div>
-          <ul class="projects__list">
+          <ul class="projects__list" data-scroll>
             <li class="projects__item">
               <a href="#" class="projects__link">
                 <div class="projects__image">
@@ -348,10 +348,10 @@
       </div>
     </section>
     <section class="projects" data-scroll-section>
-      <div class="projects__block">
-        <div class="main__border"></div>
-        <div class="container projects__container" data-scroll data-scroll-speed="-5" data-scroll-class="appear" data-scroll-repeat="true">
-          <div class="projects__flex">
+      <div class="projects__block" data-scroll data-scroll-speed="-5">
+        <div class="main__border" data-scroll></div>
+        <div class="container projects__container" data-scroll>
+          <div class="projects__flex" data-scroll>
             <h3 class="projects__head">eCommerce</h3>
             <div class="projects__right">
               <p class="projects__desc">Функциональные и удобные площадки для интернет торговли рост продаж обязателен.</p>
@@ -361,7 +361,7 @@
               </button>
             </div>
           </div>
-          <ul class="projects__list">
+          <ul class="projects__list" data-scroll>
             <li class="projects__item">
               <a href="#" class="projects__link">
                 <div class="projects__image">
@@ -413,10 +413,10 @@
       </div>
     </section>
     <section class="projects" data-scroll-section>
-      <div class="projects__block">
-        <div class="main__border"></div>
-        <div class="container projects__container" data-scroll data-scroll-speed="-5" data-scroll-class="appear" data-scroll-repeat="true">
-          <div class="projects__flex">
+      <div class="projects__block" data-scroll data-scroll-speed="-5">
+        <div class="main__border" data-scroll></div>
+        <div class="container projects__container" data-scroll>
+          <div class="projects__flex" data-scroll>
             <h3 class="projects__head">Corporative Site</h3>
             <div class="projects__right">
               <p class="projects__desc">Создаем цифровые сервисы с современным UI/UX дизайном от идеи до реализации.</p>
@@ -426,7 +426,7 @@
               </button>
             </div>
           </div>
-          <ul class="projects__list">
+          <ul class="projects__list" data-scroll>
             <li class="projects__item">
               <a href="#" class="projects__link">
                 <div class="projects__image">
